# sentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  0 README.md  1 introduction.py  2 if-elif-else.py  2 string_methods.py  3 Lists.py  4 Dictionary.py  4 forloop_conditional.py  5 Tuples.py  8 forloop_conditional.py  9 functions.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PYTHON(A-Z)_README.md  README.md  SECURITY.md  introduction.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  whileloop_conditional.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/cli/: commands.py
app/config/: __init__.py  config.py
app/core/services/: __init__.py  analyze.py
app/core/services/detect/: __init__.py  url_detector.py
app/lib/parser/: urlparser.py
app/routers/: health.py
app/server/: server.py
app/server/routers/: health.py
app/services/: url_detector.py
app/utils/: config.py
configs/: rules.yaml  settings.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
scripts/: run_dev.sh
tests/: test_health.py  test_rules.py
