[project]
# Using pyproject just for tooling config; packaging can be added later.
name = "cybersentinel"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","W","I","B","UP","C90","N","PL"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
plugins = []
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

