[project]
# Using pyproject just for tooling config; packaging can be added later.
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Keep it minimal and non-opinionated for a generic skeleton.
select = ["E", "F", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
plugins = []
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
mypy_path = "."

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

