[project]
# Using pyproject just for tooling config; packaging can be added later.
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.10"
authors = [{name="Fawz-Haaroon", email="fawzhaaroon216@gmail.com"}, {name="luvbyte", email="lovemelong@protonmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rich",
    "click",
    "fastapi",
    "pydantic",
    "requests",
    "beautifulsoup4",
    "uvicorn[standard]"
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
sentinel = "app.cli.commands:main"
